<resources>
    <string name="app_name">Простой английский</string>
    <string name="sign_in">Удобное изучение английского языка</string>
    <string name="app_title">Простой английский</string>
    <string name="login">Логин</string>
    <string name="login_hint">Ваш логин</string>
    <string name="password_hint">Ваш пароль</string>
    <string name="password">Пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="log_in_button_text">Войти</string>
    <string name="sign_up_text">Регистрация</string>
    <string name="password_example">_Compl3x_</string>
    <string name="reg_login_text">Логин(e-mail)</string>
    <string name="reg_login_example">example@gmail.com</string>
    <string name="reg_password_text">Пароль</string>
    <string name="check_account">Найти аккаунт</string>
    <string name="reg_password_rep_text">Повторите пароль</string>
    <string name="secret_word_text">Выберите секретное слово для восстаноления пароля</string>
    <string name="secret_word_hint">Секретное слово</string>
    <string name="wrong_password">Неправильный пароль</string>
    <string name="no_such_user">Несуществующий пользователь</string>
    <string name="wrong_login_format">Недопустимый логин!</string>
    <string name="your_secret_type">Ваш тип секретного слова</string>
    <string name="your_secret_type_placeholder">Ваш тип секретного слова - %1$s</string>
    <string name="user_exists">Пользователь с таким логином уже существует!</string>
    <string name="different_passwords">Пароли должны совпадать!</string>
    <string name="uk_flag_description">UK flag</string>
    <string name="settings_icon_text">Настройки</string>
    <string name="education_icon_text">Обучение</string>
    <string name="translator_icon_text">Переводчик</string>
    <string name="achievements_icon_text">Достижения</string>
    <string name="statistics_icon_text">Статистика</string>
    <string name="memoring_icon_text">Запоминание</string>
    <string name="settings_title">Настройки</string>
    <string name="xp_progress">Прогресс: %1$d XP</string>
    <string name="contact_developers">Связь с разработчиками</string>
    <string name="save_changes">Сохранить&#10;изменения</string>
    <string name="log_out">Выйти</string>
    <string name="name_text">Ваше имя</string>
    <string name="password_required">Необходим пароль!</string>
    <string name="successful_update">Настройки успешно обнолены</string>
    <string name="new_password_hint">Новый пароль</string>
    <string name="nav_header_greeting">Привет, %1$s</string>
    <string name="theory">Теория</string>
    <string name="insert_words">Вставьте слова</string>
    <string name="reading">Чтение</string>
    <string name="audio">Аудирование</string>
    <string name="welcome_text">Готовы погрузиться в мир английского, %1$s?</string>
    <string name="already_here">Вы уже здесь</string>
    <string name="back_button_double_press">Нажмите еще раз для выхода</string>
    <string name="choose_task">Выберите задание</string>
    <string name="done">Выполнено</string>
    <string name="back">Назад</string>
    <string name="choose">Выбрать</string>
    <string name="pause">Пауза</string>
    <string name="resume">Играть/Продолжить</string>
    <string name="rewind">Перемотать на начало</string>
    <string name="insert">Вставить</string>
    <string name="ready">Готово</string>
    <string name="confirm">Подтвердить</string>
    <string name="save">Сохранить</string>
    <string name="add_word">Добавить слово</string>
    <string name="russian">Русский</string>
    <string name="english">Английский</string>
    <string name="translate">Перевести</string>
    <string name="enter_text_ru">Введите текст</string>
    <string name="enter_text_en">Enter text</string>
    <string name="translation_ru">Перевод</string>
    <string name="translation_en">Translation</string>
    <string name="pronunciation_ru">Произношение</string>
    <string name="pronunciation_en">Pronunciation</string>
    <string name="enter_translation">Введите перевод</string>
    <string name="correct_answer">Правильный ответ</string>
    <string name="incorrect_answer">Неправильный ответ</string>
    <string name="no_connection">Нет подключения к интернету!</string>
    <string name="connect_to_internet">Пожалуйста, подключитесь к интернету</string>
    <string name="connect_and_reload">Подключитесь к интернету и перезагрузите страницу</string>
    <string name="taskHeaderTransitionName">taskHeader%1$d</string>
    <string name="memorisingProgress">Прогресс в запоминании</string>
    <string name="usersStatistics">Статистика по всем пользователям</string>
    <string name="developers_desc">Серверная и клиентская часть - koptelevka@student.bmstu.ru\nДизайн и бизнес-логика - kuznetsovie@student.bmstu.ru</string>

    <string-array name="secret_types">
        <item>Кличка вашего питомца</item>
        <item>Марка вашей машины</item>
        <item>Ваше счастливое число</item>
        <item>Ваш знак зодиака</item>
        <item>Другое</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
