<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/menu_background"
    tools:context=".Reading">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:transitionName="@string/taskHeaderTransitionName"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true"
            app:contentPaddingLeft="5dp"
            app:contentPaddingRight="5dp">

            <ImageView
                android:id="@+id/reading_header_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/ic_calendar" />

            <TextView
                android:id="@+id/reading_header_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="TextView"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/reading_header_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:text="TextView"
                android:textColor="@android:color/holo_green_light"
                android:textSize="20sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/textContentCard"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:cardUseCompatPadding="true"
            app:contentPaddingLeft="5dp"
            app:contentPaddingRight="5dp">

            <TextView
                android:id="@+id/textContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="TextView" />
        </androidx.cardview.widget.CardView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/back" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:backgroundTint="@android:color/holo_green_light"
                android:text="@string/done" />
        </FrameLayout>
    </LinearLayout>

</FrameLayout>